test/Fail/Sections-12.agda
open import Common.Prelude

_test_test_ : Nat → Nat → Nat → Nat
m test_test n = λ i → m + i + n
